--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>cloud-provider-payment8001</module>
+    </modules>
+
+
     <!--统一管理jar包和版本-->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
