--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>cloud-provider-payment8001</module>
+        <module>cloud-providerconsul-payment8006</module>
     </modules>
 
 
