34_服务消费者注册进Consul

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>cloud-provider-payment8001</module>
         <module>cloud-providerconsul-payment8006</module>
+        <module>cloud-consumerconsul-order80</module>
     </modules>
 
 
